--- a/styles/home.css
+++ b/styles/home.css
@@ -11,6 +11,13 @@
     justify-content: center;
 }
 
+/*Heading*/
+    font-family: 'Mr De Haviland', cursive;
+    font-size: 5vw;
+.heading {
+
+}
+
 
 /*Responsive for Slogan & Banner*/
 
