--- a/styles/home.css
+++ b/styles/home.css
@@ -19,12 +19,12 @@
     padding-right: 2vw;
 }
 
-/*Long-card-images*/
+/*Long-card-images
 
 [id*="long_card_image"] {
     width: 100%;
     height: auto;
-}
+}*/
 
 /*Responsive for Slogan & Banner*/
 
